<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/kobe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".MainActivity">

        <com.example.calculator.controler.MainNumTextView
            android:id="@+id/textViewMainNum"
            android:layout_width="365dp"
            android:layout_height="163dp"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/guideline13"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="613dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="213dp" />

        <TextView
            android:id="@+id/textViewExptr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/holo_purple"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewMainNum"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@+id/guideline12" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="384dp"
            android:layout_height="305dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toBottomOf="@+id/textViewMainNum"
            app:layout_constraintVertical_bias="0.944">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/_4"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/buttonClr"
                android:layout_width="wrap_content"
                android:layout_height="61sp"
                android:text="@string/clear"
                android:textSize="27sp"
                app:layout_column="0"
                app:layout_row="6" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="6" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="4" />

            <ImageButton
                android:id="@+id/buttonBackSpace"
                android:layout_width="93sp"
                android:layout_height="60sp"
                app:layout_column="0"
                app:layout_row="2"
                app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_gap"
                android:text="@string/_2"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="5" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="4" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="5" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="30sp"
                android:textColor="@android:color/holo_orange_dark"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textSize="30sp"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="4" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="6" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_gap"
                android:text="@string/_1"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_row="5" />

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="6" />

            <Button
                android:id="@+id/buttonLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_gap"
                android:text="@string/right"
                android:textSize="30sp"
                app:layout_column="2"
                app:layout_row="2" />
        </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>